EDSC-2674: Prevents rendering of facets when not visible (#1100)
* EDSC-2674: Fixing leaflet control container height

* EDSC-2674: Prevent rendering of facets when the facet is closed

* EDSC-2674: Adding test and cleaning up css

--- a/static/src/js/components/Facets/FacetsGroup.scss
+++ b/static/src/js/components/Facets/FacetsGroup.scss
@@ -64,17 +64,12 @@
   }
 
   &__body {
-    height: 0;
     overflow: hidden;
     background: $color__black--900;
+    border-bottom: 1px solid $color__black--700;
 
     &:first-child {
       padding-top: 0.6rem;
-    }
-
-    &--is-open {
-      height: auto;
-      border-bottom: 1px solid $color__black--700;
     }
   }
 }
